# film_bot

./: .gitignore  README.md  error_message.txt  package-lock.json  package.json  pyproject.toml
film_bot/: package-lock.json  package.json
film_bot/app/: globals.css  layout.tsx  page.tsx
film_bot/app/api/copilotkit/: route.ts
src/: .env  main.py
src/app/: agents.py  movie_fetcher.py  prompts.py  server.py  tools.py  tv_fetcher.py
